tests/expectations/compiler/bugs/b28793.out
Error [ETYC0372101]: Can only make an async call from an async transition.
    --> compiler-test:4:16
     |
   4 |         return bar();
     |                ^^^^^
     |
     = Move the async call inside of the async transition block.
Error [ETYC0372003]: Expected type `()` but type `Future<Fn()>` was found
    --> compiler-test:4:16
     |
   4 |         return bar();
     |                ^^^^^
